  "let" in Programs).
- Program CoFixpoint is accepted, Program Fixpoint uses the new way to infer 
  which argument decreases structurally.
- Program Lemma, Axiom etc... now permit to have obligations in the statement 
  iff they can be automatically solved by the default tactic.
- New command "Preterm [ of id ]" to see the actual term fed to Coq for
  debugging purposes.
- New option "Transparent Obligations" to force the declaration of 
  all obligations as transparent.
- Changed the notations "left" and "right" to "in_left" and "in_right" to hide 
  the proofs in standard disjunctions, to avoid breaking existing scripts when 
  importing Program. Also, put them in program_scope.

Type Classes

- New "Class", "Instance" and "Program Instance" commands to define
  classes and instances documented in the reference manual.  
- New binding construct " [ Class_1 param_1 .. param_n, Class_2 ... ] " 
  for binding type classes, usable everywhere.  
- New command " Print Classes " and " Print Instances some_class " to
  print tables for typeclasses.  
- New default eauto hint database "typeclass_instances" used by the default
  typeclass instance search tactic.  
- New theories directory "theories/Classes" for standard typeclasses 
  declarations. Module Classes.RelationClasses is a typeclass port of 
  Relation_Definitions plus a generic development of algebra on 
  n-ary heterogeneous predicates.
  
Setoid rewriting

- Complete (and still experimental) rewrite of the tactic
  based on typeclasses. The old interface and semantics are
  almost entirely respected, except:

  - Import Setoid is now mandatory to be able to call setoid_replace
  and declare morphisms.

  - "-->", "++>" and "==>" are now right associative notations
  declared at level 55 in scope signature_scope.
  Their introduction may break existing scripts that defined 
  them as notations with different levels.
  
  - One needs to use [Typeclasses unfold [cst]] if [cst] is used